--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,36 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hire_me_test"
         tools:targetApi="31">
+
+        <!-- ✅ Set SplashActivity as launcher -->
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- ❌ Remove incorrect .Splashactivity (lowercase) -->
+
+        <activity
+            android:name=".GiveJobActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".FindJobActivity"
+            android:exported="false" />
+
+        <!-- ✅ Keep MainActivity, but no launcher intent -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+
+    </application>
 </manifest>
