--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,3 +40,7 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
+dependencies {
+    // ... other dependencies
+    implementation("com.squareup.okhttp3:okhttp:4.11.0")  // or latest version
+}
