--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.tracing.perfetto.handshake
     implementation libs.volley
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
