--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hire_me_test"
         tools:targetApi="31">
+
+
+
         <activity
             android:name=".CompanyRegisterActivity"
             android:exported="false" />
@@ -23,7 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".DashboardActivity"
-            android:exported="false" /> <!-- Splash / Launcher Activity -->
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
