JobFinder_Registration&Forget_Password

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation libs.tracing.perfetto.handshake
     implementation libs.volley
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.material:material:1.9.0'
+
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
