--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,3 +48,11 @@ dependencies {
     // ... other dependencies
     implementation("com.squareup.okhttp3:okhttp:4.11.0")  // or latest version
 }
+dependencies {
+    implementation libs.recyclerview
+    // ... other dependencies
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+}
+
