--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:theme="@style/Theme.Hire_me_test"
         tools:targetApi="31">
         <activity
+            android:name=".ApplicantDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ApplicantsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EmployerJobsActivity"
+            android:exported="false" />
+        <activity
             android:name=".JobListActivity"
             android:exported="false" />
         <activity
