--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.gridlayout:gridlayout:1.0.0"
     dependencies {
         implementation 'com.google.android.material:material:1.10.0' // latest stable
     }
@@ -59,6 +60,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.11.0")  // or latest version
 }
 dependencies {
+    implementation libs.gridlayout
     implementation libs.swiperefreshlayout
     implementation libs.recyclerview
     // ... other dependencies
