--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ tracingPerfettoHandshake = "1.0.0"
 volley = "1.2.1"
 recyclerview = "1.4.0"
 swiperefreshlayout = "1.1.0"
+gridlayout = "1.1.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -24,6 +25,7 @@ tracing-perfetto-handshake = { group = "androidx.tracing", name = "tracing-perfe
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
+gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
