--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.gridlayout:gridlayout:1.0.0"
-    dependencies {
-        implementation 'com.google.android.material:material:1.10.0' // latest stable
-    }
+    implementation "androidx.gridlayout:gridlayout:1.0.0"
+    implementation 'com.google.android.material:material:1.10.0'
 
 
 
